# adduce

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
corpus/: ANNOTATION_GUIDE.md  PILOT_PROTOCOL.md  README.md  badged-provenance.csv  claim-ground-truth.schema.json  generation-audit.schema.json  repos.csv  run_validation.py
corpus/scripts/: audit_sentinel_generation.py  check_builtin.py  claim_ground_truth.py  clone_repos.py  compare_runs.py  label_findings.py  run_contract.py  run_validation.py  sample_findings.py  summarize.py  validate_run.py
corpus/synthetic/: expectations.yaml
corpus/synthetic/synthetic_docker_claim/: README.md  main.py
corpus/synthetic/synthetic_ghost_dep/: README.md  main.py
corpus/synthetic/synthetic_hydra_authority/: README.md  train.py
corpus/synthetic/synthetic_lr_agreement/: README.md
corpus/synthetic/synthetic_lr_drift/: README.md
corpus/synthetic/synthetic_material_mismatch/: README.md
corpus/synthetic/synthetic_metric_unrelated_table/: README.md
corpus/synthetic/synthetic_rounding_match/: README.md
corpus/synthetic/synthetic_secret/: README.md  main.py
corpus/synthetic/synthetic_seed_count/: README.md  run.sh  train.py
docs/: generation-safety.md
docs/rules/: R-ARC-001.md  R-ARC-002.md  R-ARC-003.md  R-CKPT-001.md  R-CKPT-002.md  R-CKPT-003.md  R-CKPT-004.md  R-CKPT-005.md  R-DATA-001.md  R-DATA-002.md  R-DATA-003.md  R-DATA-004.md  R-DATA-005.md  R-DATA-006.md  R-DEP-001.md  R-DEP-002.md  R-DEP-010.md  R-DEP-011.md  R-DEP-012.md  R-DEP-013.md  R-DET-001.md  R-DET-002.md  R-DET-003.md  R-DET-004.md  R-DET-005.md  R-DET-006.md  R-DOC-001.md  R-DOC-002.md  R-DOC-003.md  R-DRIFT-001.md  R-DRIFT-002.md  R-DRIFT-003.md  R-DRIFT-004.md  R-DRIFT-005.md  R-DRIFT-006.md  R-ENV-001.md  R-ENV-002.md  R-ENV-003.md  R-ENV-004.md  R-ENV-005.md  (+39 more)
scripts/: smoke_install.sh
src/adduce/: __init__.py  cache.py  cli.py  config.py  engine.py  graph.py  ledger.py  manifest.py  manifest_builder.py  model.py  modes.py  reviewer_time.py  scoring.py
tests/: conftest.py  test_checklists.py  test_cli.py  test_cli_new.py  test_collectors_new.py  test_corpus_generation_audit.py  test_corpus_methodology.py  test_corpus_runner_hardening.py  test_corpus_tooling.py  test_dependencies.py  test_dynamic_reproduce.py  test_engine.py  test_generation_safety.py  test_llm.py  test_manifest_graph.py  test_python_ast.py  test_reporters.py  test_rules_determinism.py  test_rules_misc.py  test_rules_new.py  test_scoring.py  test_synthetic_corpus.py
(+92 files in other folders)
