[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adduce"
version = "0.1.2.dev0"
description = "A local research-artifact auditor: checks that a paper's claims, code, configs, data, and results still agree, and produces the artifacts reviewers ask for."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Harsh Chudasama", email = "chudasama.h@northeastern.edu" },
]
keywords = [
    "reproducibility",
    "research",
    "machine-learning",
    "artifact-evaluation",
    "static-analysis",
    "provenance",
    "auditing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "libcst>=1.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
adduce = "adduce.cli:app"

[project.entry-points."adduce.rules"]
builtin = "adduce.rules.builtin"

[project.urls]
Homepage = "https://github.com/QHarshil/adduce"
Repository = "https://github.com/QHarshil/adduce"
Issues = "https://github.com/QHarshil/adduce/issues"
Changelog = "https://github.com/QHarshil/adduce/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/adduce"]

[tool.hatch.build.targets.sdist]
include = [
    "src/adduce",
    "tests",
    "corpus/synthetic",
    "docs/generation-safety.md",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
